--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 
 body {
+    color: #f0f0f0;
     letter-spacing: 0.4px;
     background-color: #333;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
