--- a/src/client/styles/Menu.module.css
+++ b/src/client/styles/Menu.module.css
@@ -1,6 +1,8 @@
 .menu {
     display: flex;
     justify-content: end;
+    margin-top: 20px;
+    font-size: 22px;
 }
 
 a {
@@ -14,5 +16,9 @@ a:visited {
 }
 
 nav a {
-    margin: 0px 30px 0px 30px;
+    margin: 0px 60px 0px 0px;
+}
+
+.alignmentBlock {
+    width: 140px;
 }
