--- a/src/client/styles/MainContent.module.css
+++ b/src/client/styles/MainContent.module.css
@@ -2,35 +2,26 @@
     margin: auto;
     display: flex;
     background-color: #578;
-    height: 100vh;
-}
 
-.topMainContent {
-    background-color: #000;
-    width: 100%;
-    height: 200px;
-}
-
-.welcomeText {
-    width: 600px;
-    padding: 30px;
-    margin-left: 30px;
 }
 
 .left {
     background-color: #171717;
-    flex-grow: 1;
-    height: 100%;
+    width: 10%;
+
 }
 
 .center {
-    background-color: #222;
-    flex-grow: 8;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #aaa;
+    width: 80%;
+    flex-wrap: wrap;
+    padding-left: 40px;
 }
 
 .right {
     background-color: #171717;
-    flex-grow: 1;
-    height: 100%;
+    width: 10%;
+
 }
