--- a/src/client/styles/Menu.module.css
+++ b/src/client/styles/Menu.module.css
@@ -1,7 +1,7 @@
 .menu {
     display: flex;
     justify-content: end;
-    margin-top: 20px;
+    margin-top: 25px;
     font-size: 22px;
 }
 
@@ -16,7 +16,7 @@ a:visited {
 }
 
 nav a {
-    margin: 0px 60px 0px 0px;
+    margin: 0px 3% 0px 0px;
 }
 
 .alignmentBlock {
