--- a/src/client/styles/ArtistImage.module.css
+++ b/src/client/styles/ArtistImage.module.css
@@ -1,8 +1,6 @@
 .image {
     width: 180px;
     height: 180px;
-    margin: 30px;
-    border-radius: 20px;
-    box-shadow: 4px 4px 8px -1px #171717;
-    opacity: 70%;
+    border-radius: 10px 10px 0px 0px;
+    opacity: 100%;
 }
