--- a/src/client/styles/informationTop.module.css
+++ b/src/client/styles/informationTop.module.css
@@ -1,14 +1,20 @@
 .topMainContent {
     display: flex;
+    flex-direction: column;
     align-items: center;
     background-color: #222;
-    width: 80%;
+    justify-content: center;
+    width: 70%;
     margin: auto;
     height: 200px;
+    margin-top: 1rem;
 }
 
 .welcomeText {
     width: 600px;
-    padding-left: 40px;
 
+}
+
+h3 {
+    margin-bottom: 5px;
 }
