--- a/src/client/styles/Menu.module.css
+++ b/src/client/styles/Menu.module.css
@@ -6,7 +6,9 @@
     font-size: 1rem;
     font-weight: 600;
     height: 40px;
-    background-color: #292929;
+    background-color: #303030;
+
+
 }
 
 a {
@@ -15,8 +17,8 @@ a {
 
 }
 
-nav a:nth-of-type(4) {
-    margin-right: 5%;
+nav a:nth-of-type(3) {
+    margin-right: 4%;
 }
 
 
@@ -24,5 +26,5 @@ a,
 a:visited,
 a:active {
     text-decoration: none;
-    color: #69cae7;
+    color: #72c7e0;
 }
