--- a/src/client/styles/profilePage.module.css
+++ b/src/client/styles/profilePage.module.css
@@ -1,18 +1,14 @@
 .imgAndDescription {
     display: grid;
     grid-template-columns: repeat(5, 20%);
-    background-color: #a7d;
 }
 
-.songs {
-    background-color: #a77;
-}
 
 .profileImgDiv {
     background-color: azure;
     width: 200px;
     height: 200px;
-    color: #000;
+    color: #444;
     border-radius: 10px;
 }
 
@@ -20,4 +16,8 @@
 .artistDescription,
 .artistDescription textarea {
     border-radius: 10px;
+}
+
+.audioPlayer {
+    min-width: 800px;
 }
