--- a/src/client/styles/songCard.module.css
+++ b/src/client/styles/songCard.module.css
@@ -2,14 +2,15 @@
     margin: 1.1rem;
     margin-bottom: 3rem;
     border-radius: 5px;
+    border-radius: 5px 5px 5px 5px;
+    background-color: #1a1a1a;
+    /* outline: 1px solid #444; */
 }
 
-.songCard p {
-    position: absolute;
-    background-color: #222;
-    border-radius: 5px 5px 5px 5px;
-    opacity: 92%;
+.artistTitle,
+.songTitle {
     width: 170px;
-    padding: 3px 0px 4px 0px;
+    font-size: 1rem;
+    padding: 0px 0px 4px 0px;
 
 }
